--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,12 @@
+@font-face {
+  font-family: 'Amatica SC';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Amatica SC'),
+       local('AmaticaSC-Regular'),
+       url(../fonts/font.ttf) format('truetype');
+}
+
 body {
   text-align: center;
 }
