--- a/css/style.css
+++ b/css/style.css
@@ -7,16 +7,67 @@
        url(../fonts/font.ttf) format('truetype');
 }
 
-body {
-  text-align: center;
+a {
+	position: relative;
+	display: inline-block;
+	padding: 1.2em 2em;
+	text-decoration: none;
+	text-align: center;
+	cursor: pointer;
+	user-select: none;
+	color: white;
 }
+	a::before {
+		content: '';
+		position: absolute;
+		top: 0;
+		left: 0;
+		bottom: 0;
+		right: 0;
+		background: linear-gradient(135deg, #6e8efb, #a777e3);
+		border-radius: 4px;
+		transition: box-shadow .5s ease, transform .2s ease; 
+		will-change: transform;
+		box-shadow: 0 2px 5px rgba(0, 0, 0, .2);
+		transform:
+			translateY(var(--ty, 0))
+			rotateX(var(--rx, 0))
+			rotateY(var(--ry, 0))
+			translateZ(var(--tz, -12px));
+	}
+	
+	a:hover::before {
+		box-shadow: 0 5px 15px rgba(0, 0, 0, .3);
+	}
+	
+	a::after {
+		position: relative;
+		display: inline-block;
+		content: attr(data-title);
+		transition: transform .2s ease; 
+		font-weight: bold;
+		letter-spacing: .01em;
+		will-change: transform;
+		transform:
+			translateY(var(--ty, 0))
+			rotateX(var(--rx, 0))
+			rotateY(var(--ry, 0));
+	}
 
-body h1 {
+body {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	height: 100vh;
+	transform-style: preserve-3d;
+	transform: perspective(800px);
+}
+h1 {
   font-size: 30px;
   text-transform: uppercase;
 }
 
-body button {
+button {
   font-size: 20px;
   background-color: black;
   color: #fff;
@@ -25,6 +76,7 @@ body button {
   box-shadow: 0;
   border-radius: 5px;
   margin-bottom: 20px;
+  cursor: pointer;
 }
 
 .hidden {
